# job-scraper

./: .gitignore  PID.md  README.md  pyproject.toml
.cursor/rules/: kois-planning-hygiene.mdc
.github/workflows/: ci.yml
job_scraper/: main.py  models.py  new_job_detector.py  slack_poster.py  summarizer.py
job_scraper/kois/: __init__.py  agreement_signals.py  analytics.py  clustering.py  config.py  db.py  digest.py  domain.py  extraction.py  filtering.py  gaps.py  migrations.py  orchestrator.py  repository.py  review.py  review_api.py  schema.py  utils.py
job_scraper/kois/ingestion/: __init__.py  imap_adapter.py  procurement_adapter.py  scraper_adapter.py
job_scraper/scrapers/: base.py  emagine.py  folq.py  mercell.py  verama.py  witted.py
tests/: test_baseline_behavior.py  test_digest.py  test_imap_adapter.py  test_kois_bug1_primary_source.py  test_kois_bug2_digest_pending_cleanup.py  test_kois_bug3_content_hash_collision.py  test_kois_services.py  test_phase2_intelligence.py  test_phase3_filtering.py
