[project]
name = "job-scraper"
version = "0.1.0"
description = ""
authors = ["Daniel Sørenes <daniel@kynd.no>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.10.0",
    "playwright>=1.51.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "slack-sdk>=3.35.0",
]
